# warship-scraper

./: .env.example  ABoatDatabase.py  Armament.py  Armor.py  Calculate.py  Config.py  Date.py  Dockerfile  Pipfile  README.md  Ship.py  UnitConversionTable.py  boatsScrape.json  pyproject.toml  scraper.py  shipSettings.json  shipsToScrape.json  test.py
ABoatScraping/: ABoatDatabase.py  Calculate.py  Config.py  Ship.py  scraper.py
ABoatScraping/ship_compare/: compare_all_ships.py  compare_ship_to_database.py  edge_database.py
ABoatScraping/ship_compare/ship_network_algo/: run_algos_on_network.py  shortest_path.py
ABoatScraping/utilities/: get_environment.py  text_functions.py
Backend/: Backend.js  package-lock.json  package.json
Backend/Modules/ConfigModule/: index.js
Backend/Modules/GraphModule/: index.js
Backend/Modules/GraphModule/Test/: main-test.js
Backend/Modules/LogModule/: index.js
Backend/Modules/LogModule/Test/: main-test.js
Backend/Modules/ShipModule/: index.js
Backend/Routes/: graphs.js  ships.js
ConvienceScripts/: delete_ship.py
ship_compare/: Edge.py  __init__.py  compare_all_ships.py  compare_ship_to_database.py  edge_database.py  ship_compare.py
ship_compare/ship_network_algo/: run_algos_on_network.py  shortest_path.py
utilities/: check_structure.py  get_environment.py
