[tool.poetry]
name = "ABoatScraping"
version = "0.0.1"
description = "For scraping ships"
authors = ["Navbryce <plunkett.bryce.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = {extras = ["srv"], version = "^4.1.1"}
lxml = "^4.9.1"
cssselect = "^1.1.0"
Unidecode = "^1.3.4"
DateTime = "^4.5"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
